# l-reader

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  vite.config.ts
backend/: .env.example  README.md  package.json  railway.toml
backend/src/: cache.ts  index.ts
backend/src/routes/: ai.ts  pdf.ts  search.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/chat/: AnnotationsView.tsx  ChatPanel.tsx  MessageRow.tsx
frontend/src/components/pdf/: AnnotationLayer.tsx  AnnotationToolbar.tsx  AnnotationsView.tsx  PdfPanel.tsx
frontend/src/components/search/: SearchPanel.tsx
frontend/src/components/ui/: Resizer.tsx
frontend/src/hooks/: useAnnotations.ts  usePdf.ts
frontend/src/lib/ai/: index.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
src/: App.tsx
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  mod.rs  pdf.rs  search.rs
src/components/chat/: AnnotationsView.tsx  ChatPanel.tsx
src/components/pdf/: AnnotationLayer.tsx  PdfPanel.tsx
src/components/search/: SearchPanel.tsx
src/components/settings/: SettingsModal.tsx
src/components/ui/: Resizer.tsx
src/hooks/: useAnnotations.ts  useChat.ts  usePdf.ts
src/lib/ai/: format.ts  index.ts
src/lib/pdf/: export-annotations.ts  export.ts  intelligence.ts
src/store/: index.ts
src/types/: index.ts
(+3 files in other folders)
