[package]
name    = "lectio"
version = "0.1.0"
edition = "2021"

[lib]
name         = "lectio_lib"
crate-type   = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lectio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs    = "2"
tauri-plugin-shell = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "stream"] }
tokio       = { version = "1",   features = ["full"] }
base64      = "0.22"
quick-xml   = { version = "0.36", features = ["serialize"] }
scraper     = "0.20"
urlencoding = "2"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
